# AIML-DiagnosisBot

./: .gitignore  20251214.code-workspace  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example  streamlit_app.config
src/application/: conversation.py  ports.py  schemas.py  use_cases.py
src/domain/: models.py  rules.py
src/infrastructure/: config.py
src/infrastructure/auth/: user_manager.py  validators.py
src/infrastructure/doctor_search/: google_places.py  mock_search.py
src/infrastructure/llm/: mistral_client.py
src/presentation/: auth_screens.py  streamlit_app.py
tests/: test_auth_screens.py  test_use_cases.py  test_user_manager.py  test_validators.py
